crates/ridge-codegen-erl/tests/snapshots/core_ast_snapshot__with_chained.snap
---
source: crates/ridge-codegen-erl/tests/core_ast_snapshot.rs
expression: "&cerl_module"
---
CErlModule {
    name: CErlAtom(
        "ridge_module_0",
    ),
    exports: [],
    attributes: [
        CErlAttribute {
            name: CErlAtom(
                "ridge_meta",
            ),
            value: Tuple(
                [
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_meta_v1",
                            ),
                        ),
                    ),
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_module_0",
                            ),
                        ),
                    ),
                    ListLit(
                        [],
                    ),
                    ListLit(
                        [],
                    ),
                ],
            ),
        },
    ],
    fns: [
        CErlFn {
            name: CErlAtom(
                "with_chained",
            ),
            arity: 1,
            anns: [
                CErlAnn(
                    "%% File: <source>, Offset: 41",
                ),
                CErlAnn(
                    "%% Caps: {}",
                ),
            ],
            body: Fun {
                params: [
                    CErlVar(
                        "V_P",
                    ),
                ],
                body: Let {
                    var: CErlVar(
                        "V_P1",
                    ),
                    value: Let {
                        var: CErlVar(
                            "V_Anf0",
                        ),
                        value: MapLit(
                            [
                                (
                                    Lit(
                                        Atom(
                                            CErlAtom(
                                                "x",
                                            ),
                                        ),
                                    ),
                                    Lit(
                                        Int(
                                            1,
                                        ),
                                    ),
                                ),
                            ],
                        ),
                        body: Call {
                            module: CErlAtom(
                                "maps",
                            ),
                            fn_name: CErlAtom(
                                "merge",
                            ),
                            args: [
                                Var(
                                    CErlVar(
                                        "V_P",
                                    ),
                                ),
                                Var(
                                    CErlVar(
                                        "V_Anf0",
                                    ),
                                ),
                            ],
                        },
                    },
                    body: Let {
                        var: CErlVar(
                            "V_Anf1",
                        ),
                        value: MapLit(
                            [
                                (
                                    Lit(
                                        Atom(
                                            CErlAtom(
                                                "y",
                                            ),
                                        ),
                                    ),
                                    Lit(
                                        Int(
                                            2,
                                        ),
                                    ),
                                ),
                            ],
                        ),
                        body: Call {
                            module: CErlAtom(
                                "maps",
                            ),
                            fn_name: CErlAtom(
                                "merge",
                            ),
                            args: [
                                Var(
                                    CErlVar(
                                        "V_P1",
                                    ),
                                ),
                                Var(
                                    CErlVar(
                                        "V_Anf1",
                                    ),
                                ),
                            ],
                        },
                    },
                },
            },
        },
    ],
}
